# solana-paper-wallet

./: .gitignore  Cargo.toml  README.md  REFLECTIONS.md  deploy.sh  integration.sh  keypair.json  package.json
client/: README.md  package.json
client/js-client/: package.json
client/js-client/src/: HowTo.js  Nav.js  NotFound.js  Redeem.js  index.js
client/public/: index.html
client/src/: .Store.js  Airdrop.js  App.js  index.css  index.js
client/src/components/: Button.js  Container.js  ErrorContext.js  Footer.js  Icon.js  Input.js  Label.js  Logo.js  Navbar.js  Section.js  WalletContext.js
client/src/modules/: colors.js  paper.js  utils.js
client/src/pages/: Aidrop.js  Airdrop.js  Home.js  NotFound.js  Redeem.js  Store.js
scripts/: deploy.sh
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: integration.rs
