[package]
name = "solana-paper-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-program = "1.11.1"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.11.1"
solana-program-test = "1.11.1"
solana-validator = "1.11.1"
solana-logger = "1.11.1"
assert_matches = "1.5.0"

[lib]
crate-type = ["cdylib", "lib"]
